# ScalFMM3

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  NEWS.txt  QUICKSTART.md  README.md  ToDO.md  requested_features.md  scalfmmConfig.cmake.in  vcpkg.json
bench/: CMakeLists.txt  fmm_generic.hpp  gen_args.hpp  loop_leaf.cpp  sequential.cpp  tasks_dep_omp.cpp
checks/: CMakeLists.txt  check_1d.cpp  check_2d.cpp  check_interaction_lists.cpp  check_interpolation.cpp  check_l2p.cpp  check_max_morton_level.cpp  check_morton_index.cpp  check_morton_sort.cpp  check_mpi.cpp  check_p2p.cpp  check_periodic.cpp  check_periodic_omp.cpp  check_source-target.cpp  check_xtensor_blas.cpp  count_particles_gen.hpp  count_particles_mpi.cpp  count_particles_omp.cpp  count_particles_seq.cpp  count_particles_st_gen.hpp  count_particles_st_omp.cpp  count_particles_st_seq.cpp  debug_omp.cpp  interactions_results.hpp  sandbox.cpp  test_blas.cpp  test_block.cpp  test_build_let.cpp  test_build_tree.cpp  test_chebyshev.cpp  test_compose.cpp  test_m2l_sym.cpp  test_morton_per.cpp  test_p2p_inner_non_mutual.cpp  test_storage.cpp  test_tree_2_0.cpp  test_xtensor.cpp
cmake/: analysis.cmake  dependencies.cmake  export.cmake  flags.cmake  meta_module.cmake  meta_module_template.cmake.in  modules.cmake  options.cmake
cmake/dependencies/: blas_lapack.cmake  fftw.cmake  mpi.cmake  openmp.cmake  starpu.cmake
data/: Readme.md  cubeSorted_10.fma  cubeSorted_10_P.fma  cubeSorted_10_PF.fma  datal2p_10.fma  sphere20_3_2q.fma  sphere20_3_2q_Double-Mean.fma  sphere20_3_2q_Like_mrhs.fma  test_3d_ref.fma  unitCube_100_PF.fma
data/debug/: cercle2d_r3.vtp  circle2d_r3.fma  prolate.fma  prolate.vtp
data/sources_targets/: circle-100_source.fma  circle-100_target.fma  circle-10_source.fma  circle-10_target.fma  sphere-706_source.fma  sphere-706_target.fma  sphere-96_source.fma  sphere-96_target.fma
data/units/: test_1d_ref.fma  test_2d_ref.fma  test_4d_ref.fma  unitCube_2d_100_per.fma  unitCube_3d_100_ref.fma  xyzq100_ref.fma
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  user_guide.org  whats_new.md
examples/: CMakeLists.txt  Readme.md  catalyst_related.hpp  fmm_source_target.cpp  test_dimension.cpp  test_dimension_low_rank.cpp  test_dimension_omp.cpp  test_laplace_kernels.cpp  test_like_mrhs.cpp  test_mpi_algo.cpp  test_particles.cpp  test_periodic_dist.cpp  test_tensorial_interpolator.cpp  test_time_loop.cpp  tutorial.cpp
include/scalfmm/algorithms/: common.hpp  fmm.hpp  full_direct.hpp
include/scalfmm/algorithms/mpi/: direct.hpp  downward.hpp  proc_task.hpp  transfer.hpp  upward.hpp
include/scalfmm/algorithms/omp/: cell_to_leaf.hpp  direct.hpp  downward.hpp  leaf_to_cell.hpp  macro.hpp  periodic.hpp  priorities.hpp  task_dep.hpp  transfer.hpp  upward.hpp  utils.hpp
include/scalfmm/algorithms/sequential/: cell_to_leaf.hpp  direct.hpp  downward.hpp  leaf_to_cell.hpp  periodic.hpp  sequential.hpp  transfer.hpp  upward.hpp  utils.hpp
include/scalfmm/concepts/: library.hpp
include/scalfmm/config/: scalfmm-config.hpp.cmake
include/scalfmm/container/: access.hpp  block.hpp  iterator.hpp  morton_curve.hpp  particle.hpp  particle_container.hpp  particle_impl.hpp  particle_proxy.hpp  point.hpp  reference_sequence.hpp  simple_variadic.hpp  variadic_adaptor.hpp
include/scalfmm/functional/: utils.hpp
include/scalfmm/interpolation/: builders.hpp  chebyshev.hpp  generate_circulent.hpp  grid_storage.hpp  interpolation.hpp  interpolator.hpp  mapping.hpp  matrix_kernel.hpp  permutations.hpp  traits.hpp  uniform.hpp
include/scalfmm/lists/: lists.hpp  omp.hpp  policies.hpp  sequential.hpp  utils.hpp
include/scalfmm/matrix_kernels/: debug.hpp  gaussian.hpp  laplace.hpp  mk_common.hpp  scalar_kernels.hpp  template_matrix_kernel.hpp
include/scalfmm/memory/: aligned_allocator.hpp  storage.hpp
include/scalfmm/meta/: const_functions.hpp  forward.hpp  is_valid.hpp  traits.hpp  type_pack.hpp  utils.hpp
include/scalfmm/operators/: fmm_operators.hpp  l2l.hpp  l2p.hpp  m2l.hpp  m2m.hpp  mutual_apply.hpp  p2m.hpp  p2p.hpp  tags.hpp
include/scalfmm/options/: options.hpp
include/scalfmm/parallel/: utils.hpp
include/scalfmm/simd/: memory.hpp  utils.hpp
include/scalfmm/spherical/: sperical.hpp
include/scalfmm/tags/: tags.hpp
include/scalfmm/tools/: bench.hpp  data_generate.hpp  fma_dist_loader.hpp  fma_loader.hpp  laplace_tools.hpp  progress_bar.hpp  tikz_writer.hpp  tree_io.hpp  vtk_writer.hpp
include/scalfmm/tree/: box.hpp  cell.hpp  dist_group_tree.hpp  for_each.hpp  group.hpp  group_let.hpp  group_of_views.hpp  group_tree_view.hpp  header.hpp  io.hpp  leaf.hpp  leaf_view.hpp  morton_curve.hpp  utils.hpp
include/scalfmm/utils/: accurater.hpp  compare_results.hpp  compare_trees.hpp  fftw.hpp  generate.hpp  io_helpers.hpp  low_rank.hpp  massert.hpp  math.hpp  parameters.hpp  periodicity.hpp  sort.hpp  source_target.hpp  static_assert_as_exception.hpp  tensor.hpp
ports/intel-mkl/: portfile.cmake
scripts/: check_kernels.sh  iwyu.sh
scripts/curves/: histo.py  trace.py
tools/: CMakeLists.txt  change_file_format.cpp  compare_files.cpp  compare_trees.cpp  define_symmetries.cpp  direct_computation.cpp  generate_distribution.cpp  sort_particles.cpp  tools_param.hpp  trace_tree.cpp
units/: CMakeLists.txt  container.cpp  point.cpp
units/container/: particle.cpp  point_proxy.cpp  variadic_containers.cpp
units/fmm/: count_kernel.cpp  count_kernel_mpi.cpp  count_kernel_omp.cpp  count_kernel_st.cpp  count_kernel_st_omp.cpp  grad_one_over_r.cpp  homogenous.cpp  homogenous_omp.cpp  logarithmic.cpp  non_homogenous.cpp  non_mutual.cpp  periodic_level_0.cpp  periodic_level_0_omp.cpp  shift_grad_one_over_r.cpp  shift_grad_one_over_r_omp.cpp  source-target.cpp  source-target_omp.cpp  units_count_kernel_gen.hpp  units_count_kernel_mpi_gen.hpp.in  units_count_kernel_st_gen.hpp  units_fmm.hpp.in  units_source-target.hpp.in  val_grad_one_over_r.cpp
units/operators/: interp.cpp  l2p.cpp  p2p_full_mutual.cpp  p2p_inner.cpp
units/tree/: interaction_list.cpp
(+45 files in other folders)
